# citest

./: CMakeLists.txt
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  myclass.cpp  myclass.h
test/: CMakeLists.txt  main.cpp
